# fiap-soat-video-auth

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  python-tests.yml  test-and-deploy.yaml
k8s/base/: configmap-app.yaml  deployment-api.yaml  hpa-api.yaml  secret-app.yaml  service-api.yaml
k8s/overlays/local-dev/: patch-configmap-app.yaml  patch-service-api-nodeport.yaml
src/auth_service/: __init__.py
src/auth_service/application/: __init__.py
src/auth_service/application/ports/input/: __init__.py  auth_service.py
src/auth_service/application/ports/output/repositories/: __init__.py  user_repository.py
src/auth_service/application/use_cases/: __init__.py  login_user.py  register_user.py
src/auth_service/domain/: __init__.py
src/auth_service/domain/entities/: __init__.py  user.py
src/auth_service/infrastructure/: __init__.py
src/auth_service/infrastructure/adapters/input/api/: dependencies.py  main.py
src/auth_service/infrastructure/adapters/output/persistence/: database.py  models.py
src/auth_service/infrastructure/config/: __init__.py  settings.py
tests/: conftest.py
tests/integration/api/: test_auth_routes.py  test_health_routes.py
tests/unit/application/use_cases/: test_login_user.py  test_register_user.py
tests/unit/domain/: test_user.py
tests/unit/infrastructure/adapters/input/api/: test_dependencies.py
tests/unit/infrastructure/adapters/output/persistence/: test_database.py  test_user_repository.py
tests/unit/infrastructure/config/: test_settings.py
(+8 files in other folders)
